--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body{
     display: flex;
     flex-direction: row;
     background-color: black;
-    background-image: url(/home/dante22/sign-up-form/images/tim-schmidbauer-TE_lOmkKq04-unsplash.jpg        );
+    background-image: url(./images/tim-schmidbauer-TE_lOmkKq04-unsplash.jpg);
     background-repeat: no-repeat;   
     background-size: cover ;
     
